--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 
 <body>
 	<h1>Need For Speed</h1>
-<div class="left-side player1"></div>
-<div class="right-side player2"></div>
+<div class="left-side player1">
+	<img id="car1" src="car1.png">
+</div>
+<div class="right-side player2">
+	<img id="car2" src="car2.png">
+</div>
 </body>
 </html>
