added some jQuery

--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
 	<!--CSS-->
 	<link rel="stylesheet" type="text/css" href="style.css">
 
+	<!--jQuery-->
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
 	<!--JavaScript-->
 	<script type="text/javascript" src="app.js"></script>
+
 </head>
 
-	<!--jQuery-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
 <body>
-	<h1>Need For Speed</h1>
+	<h1>Need For Speed_Sarad</h1>
+	<button>Car1</button><br>
+	<button>Car2</button>
+
 <div class="left-side player1">
 	<img id="car1" src="car1.png">
 </div>
