added more jQuery

--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
 
 <body>
 	<h1>Need For Speed_Sarad</h1>
-	<button>Car1</button><br>
-	<button>Car2</button>
 
-<div class="left-side player1">
-	<img id="car1" src="car1.png">
-</div>
-<div class="right-side player2">
-	<img id="car2" src="car2.png">
-</div>
+	<button id="start_game">Start Game</button>
+	<button id="instruction">Playing Instructions</button>
+    <div class="play_key">Player 1 = Press "z"<br>Player 2 = Press "p"
+    </div>
+
+	<!-- Race Track -->
+	<div class="left-side first-div player1">
+	    <img id="car1" src="car1.png">
+	</div>
+	<div class="right-side second-div player2">
+	    <img id="car2" src="car2.png">
+	</div>
 </body>
 </html>
