Added Reset Button

--- a/index.html
+++ b/index.html
@@ -13,17 +13,21 @@
 </head>
 
 <body>
-	<h1>Need For Speed_Sarad</h1>
+	<div class="title">Need For Speed</div>
 
 	<button id="start_game">Start Game</button>
 	<button id="instruction">Playing Instructions</button>
+	<button id="reset">Restart Game</button>
     <div class="play_key">Player 1 = Press "z"<br>Player 2 = Press "p"
     </div>
+    <p></p>
 
-	<!-- Race Track -->
+<!-- 	<div class="play_key">GO!!!</div>
+ -->	<!-- Race Track -->
 	<div class="left-side first-div player1">
 	    <img id="car1" src="car1.png">
 	</div>
+
 	<div class="right-side second-div player2">
 	    <img id="car2" src="car2.png">
 	</div>
