added some css animation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<button id="start_game">Start Game</button>
 	<button id="instruction">Playing Instructions</button>
-	<button id="reset">Restart Game</button>
+	<button id="reset">Restart start_game</button>
     <div class="play_key">Player 1 = Press "z"<br>Player 2 = Press "p"
     </div>
     <p></p>
