--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 
 </head>
 
-<body>
-	<div class="title">Need For Speed</div>
+<body background="background.jpg">
+	      <!-- HEADING -->
+	<div class="title">Need For Speed</div><hr>
 
 	<button id="start_game">Start Game</button>
 	<button id="instruction">Playing Instructions</button>
-	<button id="reset">Restart start_game</button>
+	<button id="reset">Restart Game</button>
     <div class="play_key">Player 1 = Press "z"<br>Player 2 = Press "p"
     </div>
     <p></p>
@@ -26,10 +27,12 @@
  -->	<!-- Race Track -->
 	<div class="left-side first-div player1">
 	    <img id="car1" src="car1.png">
+	    <div class="inside"></div>
 	</div>
 
 	<div class="right-side second-div player2">
 	    <img id="car2" src="car2.png">
+	    <div class="inside"></div>
 	</div>
 </body>
 </html>
