added new background image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body background="background.jpg">
+<body background="background3.jpeg">
 	      <!-- HEADING -->
 	<div class="title">Need For Speed</div><hr>
 
