--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<button id="start_game">Start Game</button>
 	<button id="instruction">Playing Instructions</button>
 	<button id="reset">Restart Game</button>
-    <div class="play_key">Player 1 = Press "z"<br>Player 2 = Press "p"
+    <div class="play_key">Orange Car(Press "z")<br>Red Car(Press "p")
     </div>
     <p></p>
 
